# pkg/accounts/types.go
@@ -18,6 +18,7 @@ type Account struct {
 	HasProfileImage     bool      `json:"has_profile_image"`
 	ImagePositionX      int       `json:"image_position_x"`
 	ImagePositionY      int       `json:"image_position_y"`
+	IsProfilePublic     bool      `json:"is_profile_public"`
 	CreatedAt           time.Time `json:"created_at"`
 	UpdatedAt           time.Time `json:"updated_at"`
 }
@@ -82,6 +83,7 @@ type AccountUpdateInput struct {
 	InstagramURL        *string `json:"instagram_url"`
 	ImagePositionX      *int    `json:"image_position_x"`
 	ImagePositionY      *int    `json:"image_position_y"`
+	IsProfilePublic     *bool   `json:"is_profile_public"`
 }
 
 // ResendConfirmEmailInput represents the data required to resend a confirmation email
